Applied open rewrite recipes (#513)
* Applied open rewrite recipes

* Upgrade do Java 11