@@ -30,7 +30,7 @@ import java.lang.reflect.Proxy;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.time.LocalDate;
@@ -119,7 +119,7 @@ public class TypeTest implements InvocationHandler {
     valueAndType.add(Pair.of(true, new YesNoType()));
     valueAndType.add(Pair.of(Timestamp.valueOf(LocalDateTime.now()), new TimestampType()));
     valueAndType.add(Pair.of(Time.valueOf(LocalTime.now()), new TimeType()));
-    valueAndType.add(Pair.of(new URL("http://www.mysema.com"), new URLType()));
+    valueAndType.add(Pair.of(URI.create("http://www.mysema.com").toURL(), new URLType()));
     valueAndType.add(Pair.of(new java.util.Date(), new UtilDateType()));
 
     //        valueAndType.add(Pair.of(new DateTime(), new DateTimeType()));
